--- a/bookingpage/bookingPage.css
+++ b/bookingpage/bookingPage.css
@@ -1,4 +1,3 @@
-
 body {
   margin: 0%;
   padding: 0%;
@@ -53,8 +52,8 @@ body {
   margin: 15px 0;
   float: right;
 }
-#offers #navbar #nav_ul li a:hover{
-    color: chartreuse;
+#offers #navbar #nav_ul li a:hover {
+  color: chartreuse;
 }
 .fa-caret-down {
   margin-left: 8px;
@@ -69,7 +68,7 @@ body {
   width: 160px;
   margin-top: 1px;
   display: none;
-   box-shadow: 0 1px 1px 1px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 1px 1px 1px rgba(0, 0, 0, 0.3);
   background-color: white;
 }
 
@@ -140,7 +139,7 @@ body {
   right: 350px;
   text-align: center;
   align-items: center;
-   box-shadow: 0 1px 1px 1px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 1px 1px 1px rgba(0, 0, 0, 0.3);
 }
 #sub_det_item .arrowmiddle {
   position: absolute;
@@ -252,7 +251,7 @@ body {
   right: 160px;
   text-align: center;
   align-items: center;
-   box-shadow: 0 1px 1px 1px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 1px 1px 1px rgba(0, 0, 0, 0.3);
 }
 .zms_detail p {
   color: #33414f;
@@ -403,12 +402,12 @@ body {
   margin-top: 20px;
 }
 .log_r_top_cont {
-  height: 200px;
+  height: 70px;
   margin-left: 5px;
   border-bottom: 1px solid rgb(255, 253, 253);
   box-shadow: 0 1px 0px 0 rgb(211, 210, 210);
 }
-.log_r_top_cont_face {
+/* .log_r_top_cont_face {
   background-color: blue;
   margin: 20px auto 20px;
   width: 300px;
@@ -431,7 +430,7 @@ body {
 .log_r_top_cont a {
   text-decoration: none;
   color: white;
-}
+} */
 .log_r_bot {
   height: 190px;
 }
@@ -585,12 +584,12 @@ body {
   margin-top: 20px;
 }
 .log_r_top_cont2 {
-  height: 200px;
+  height: 70px;
   margin-left: 5px;
   border-bottom: 1px solid rgb(255, 253, 253);
   box-shadow: 0 1px 0px 0 rgb(211, 210, 210);
 }
-.log_r_top_cont_face2 {
+/* .log_r_top_cont_face2 {
   background-color: blue;
   margin: 20px auto 20px;
   width: 300px;
@@ -613,7 +612,7 @@ body {
 .log_r_top_cont2 a {
   text-decoration: none;
   color: white;
-}
+} */
 .log_r_bot2 {
   height: 190px;
 }
@@ -709,11 +708,11 @@ body {
   border: 2px solid greenyellow;
   border-radius: 5px;
 }
- /* Search bar */
+/* Search bar */
 /* <---------------------------------------------------> */
 * {
-    font-family: Open Sans;
-    color: #323a44;
+  font-family: Open Sans;
+  color: #323a44;
 }
 .gridBook {
   display: grid;
@@ -722,357 +721,347 @@ body {
   grid-template-rows: 200px;
   padding-top: 70px;
 }
-.smallBox{
+.smallBox {
   height: 370px;
   background: #efefef;
 }
-.bigBox{
+.bigBox {
   display: grid;
   grid-template-columns: 100%;
   grid-template-rows: 25% 22% 53%;
   background-color: white;
   height: 100%;
 }
-.flex{
-           display: flex;
-           margin-bottom: 5px;
-           align-items: center;
-       }
-       .tick{
-        
-           width: 20px;
-           height: 20px;
-           border-radius: 50%;
-           margin-right: 5px;
-           background-color: #70ad4d;
-       }
-       .tickMark{
-           
-           width: 2px;
-           height: 7px;
-           padding: 2px;
-           margin-left: 6px;
-           border: solid white;
-           border-width: 0 1.5px 1.5px 0 ;
-           transform: rotate(45deg);
-       }
+.flex {
+  display: flex;
+  margin-bottom: 5px;
+  align-items: center;
+}
+.tick {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  margin-right: 5px;
+  background-color: #70ad4d;
+}
+.tickMark {
+  width: 2px;
+  height: 7px;
+  padding: 2px;
+  margin-left: 6px;
+  border: solid white;
+  border-width: 0 1.5px 1.5px 0;
+  transform: rotate(45deg);
+}
 
-       .flex h4{
-        font-size: 12px;
-       }
+.flex h4 {
+  font-size: 12px;
+}
 
-       .cityBox{
-           width: 85%;
-           height: 100px;
-           border: 1px solid rgb(247, 235, 213);
-           background-color: white;
-           margin: auto;
-           display: flex;
-           flex-direction: row;
-           
-       }
-       .cityBox h6{
-         margin-left: 20px;
-       }
-       .diffCity{
-            display: flex;
-            width: 85%;
-            height: 40px;
-            margin: auto;
-           border: 1px solid rgb(247, 235, 213);
-           background-color: white; 
-       }
-       .diffCity h3{
-         font-size: 14px;
-       }
-       .diffCity input{
-       
-         margin: auto;
+.cityBox {
+  width: 85%;
+  height: 100px;
+  border: 1px solid rgb(247, 235, 213);
+  background-color: white;
+  margin: auto;
+  display: flex;
+  flex-direction: row;
+}
+.cityBox h6 {
+  margin-left: 20px;
+}
+.diffCity {
+  display: flex;
+  width: 85%;
+  height: 40px;
+  margin: auto;
+  border: 1px solid rgb(247, 235, 213);
+  background-color: white;
+}
+.diffCity h3 {
+  font-size: 14px;
+}
+.diffCity input {
+  margin: auto;
+}
+.smallBox hr {
+  color: gray;
+  margin-top: 20px;
+}
+.kmBox {
+  width: 130px;
+  height: 100px;
+  margin-left: 20px;
+  background-color: white;
+}
+.kmBox h5 {
+  color: gray;
+  padding: 5px 20px;
+  font-size: 12px;
+}
+.kmBox h6 {
+  font-size: 14px;
+  margin-top: 5px;
+  text-align: center;
+}
+.smallItem {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-template-rows: auto;
+  grid-gap: 5px;
+}
+.rightArrow {
+  display: inline-block;
+  margin-top: 27px;
+  width: 5px;
+  height: 5px;
+  border-right: 1.5px solid rgba(0, 0, 0, 0.54);
+  border-bottom: 1.5px solid rgba(0, 0, 0, 0.54);
+  transform: rotate(-45deg);
+  margin-left: 10px;
+}
 
-       }
-       .smallBox hr{
-         color: gray;
-         margin-top: 20px;
-       }
-       .kmBox {
-         width: 130px;
-         height: 100px;
-         margin-left: 20px;
-         background-color: white;
-       }
-       .kmBox h5{
-         color: gray;
-         padding: 5px 20px;
-         font-size: 12px;
-       }
-       .kmBox h6{
-         font-size: 14px;
-         margin-top: 5px;
-         text-align: center;
-
-       }
-       .smallItem {
-         display: grid;
-         grid-template-columns: auto auto auto;
-         grid-template-rows: auto;
-         grid-gap: 5px;
-       }
-       .rightArrow {
-        display: inline-block;
-        margin-top: 27px;
-        width: 5px;
-        height: 5px;
-        border-right: 1.5px solid rgba(0,0,0,.54);
-        border-bottom: 1.5px solid rgba(0,0,0,.54);
-        transform: rotate(-45deg);
-        margin-left: 10px;
-      }
-
-       .sort{
-         display: flex;
-         flex-direction: row;
-         margin-left: 10px;
-        
-       }
-       .sort button{
-         margin-top: 12px;
-         display: inline-block;
-         border-radius: 2px;
-         background-color: #fff;
-         border: 1px solid #d8d8d8;
-         padding: 3px 10px;
-         font-size: 11px;
-         color: #9b9b9b;
-         margin-left: 10px;
-         cursor: pointer;
-         position: relative;
-       }
+.sort {
+  display: flex;
+  flex-direction: row;
+  margin-left: 10px;
+}
+.sort button {
+  margin-top: 12px;
+  display: inline-block;
+  border-radius: 2px;
+  background-color: #fff;
+  border: 1px solid #d8d8d8;
+  padding: 3px 10px;
+  font-size: 11px;
+  color: #9b9b9b;
+  margin-left: 10px;
+  cursor: pointer;
+  position: relative;
+}
 
 /* <------Car List---------> */
- #carListGrid {
-   display: grid;
-   grid-template-columns: 100%;
-   grid-template-rows: auto auto auto auto;
-   grid-gap: 5px;
- }
- .carComponent{
-   display: flex;
-   flex-direction: column;
- }
-  #detailGrid {
-        display: grid;
-        grid-template-columns: 20% 60% 15%;    
-        grid-template-rows: 150px;
-        margin: 1%;
-        width: 97%;
-        height: 150px;
-        padding: 4px;
-        background-color: white;
-        position: relative;
-        box-shadow: 0 0 6px 0 hsl(0deg 0% 66% / 50%);
-        border: 1px solid #e1e1e1;
-        
-    }
-    /* .carImage{
+#carListGrid {
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: auto auto auto auto;
+  grid-gap: 5px;
+}
+.carComponent {
+  display: flex;
+  flex-direction: column;
+}
+#detailGrid {
+  display: grid;
+  grid-template-columns: 20% 60% 15%;
+  grid-template-rows: 150px;
+  margin: 1%;
+  width: 97%;
+  height: 150px;
+  padding: 4px;
+  background-color: white;
+  position: relative;
+  box-shadow: 0 0 6px 0 hsl(0deg 0% 66% / 50%);
+  border: 1px solid #e1e1e1;
+}
+/* .carImage{
         width: 50px;
         height: 50px;
         border: 1px solid black;
         align-items: center;
         
     } */
-    .carDetails{
-        display: grid;
-        grid-template-columns: 100%;
-        grid-template-rows: 30px 20px;
-    }
+.carDetails {
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: 30px 20px;
+}
 
-    .carName{
-      margin: 0;
-      font-size: 19px;
-      font-weight: 700;
-      color: #33414f;
-      margin: 0 0 10px 20px;
-    }
-    
-    .discription_img{
-    background-position: -25px 0;
-    height: 20px;
-    width: 20px;
-    }
+.carName {
+  margin: 0;
+  font-size: 19px;
+  font-weight: 700;
+  color: #33414f;
+  margin: 0 0 10px 20px;
+}
 
-    .carFlex{
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        margin-left: 5px;
-        justify-content: flex-start;
-        color: #8d97a1;
-        font-size: 12px;
-       
-    }
-    .carFlex div{
-        margin-left: 10px;
-    }
-    .placeGrid {
-        display: grid;
-        grid-template-columns: 50% 50%;
-        grid-template-rows: 10px 10px;
-        margin-top: 50px;
-        grid-gap: 15px;
-    }
-    .booking{
-        display: grid;
-        grid-template-columns: 100%;
-        grid-template-rows: 33.3 33.3 33.3;
-        grid-gap: 20px;
-    }
+.discription_img {
+  background-position: -25px 0;
+  height: 20px;
+  width: 20px;
+}
 
-    .booking .bookPrice{
-      font-size: 30px;
-      color: #70ad4d;
-      font-weight: 600;
-    }
+.carFlex {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-left: 5px;
+  justify-content: flex-start;
+  color: #8d97a1;
+  font-size: 12px;
+}
+.carFlex div {
+  margin-left: 10px;
+}
+.placeGrid {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 10px 10px;
+  margin-top: 50px;
+  grid-gap: 15px;
+}
+.booking {
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: 33.3 33.3 33.3;
+  grid-gap: 20px;
+}
 
-    .bboking .km{
-      font-size: 12px;
-      color: #000;
-      opacity: .54;
-    }
-    .bookCar{
+.booking .bookPrice {
+  font-size: 30px;
+  color: #70ad4d;
+  font-weight: 600;
+}
 
-        width: 112px;
-        /* height: 32px;
+.bboking .km {
+  font-size: 12px;
+  color: #000;
+  opacity: 0.54;
+}
+.bookCar {
+  width: 112px;
+  /* height: 32px;
         margin-top: 10px;
         padding: 6px 10px; */
-        background-color: #70ad4d;
-        color: #fff;
-        outline: none;
-        border: 0;
-        font-size: 14px;
-        font-weight: 600;
-        letter-spacing: .6px;
-        border-radius: 2px;
-       cursor: pointer;
-      }
+  background-color: #70ad4d;
+  color: #fff;
+  outline: none;
+  border: 0;
+  font-size: 14px;
+  font-weight: 600;
+  letter-spacing: 0.6px;
+  border-radius: 2px;
+  cursor: pointer;
+}
 
-      /* -------------know More----------------- */
-  
+/* -------------know More----------------- */
+
 .openKnowMore {
   margin-top: 0px;
   display: none;
 }
-   .openKnowMore .priceGrid{
-     display: grid;
-     grid-template-columns: 200px 200px 200px 200px;
-     grid-template-rows: 50px 25px;
-     grid-gap: 5px;
-   }
-   .openKnowMore .priceGrid div{
-     
-      text-align: center;
-   }
-   .info {
-    font-size: 14px;
-    font-weight: 600;
-    text-align: left;
-    color: #33414f;
-    background-color: rgba(238,90,87,.1);
-    padding: 15px 63px;
-   }
-   /* .info h6{
+.openKnowMore .priceGrid {
+  display: grid;
+  grid-template-columns: 200px 200px 200px 200px;
+  grid-template-rows: 50px 25px;
+  grid-gap: 5px;
+}
+.openKnowMore .priceGrid div {
+  text-align: center;
+}
+.info {
+  font-size: 14px;
+  font-weight: 600;
+  text-align: left;
+  color: #33414f;
+  background-color: rgba(238, 90, 87, 0.1);
+  padding: 15px 63px;
+}
+/* .info h6{
      margin-left: 30px;
      font-size: 16px;
      padding: 5px;
    } */
-   .policyGrid {
-     display: grid;
-     grid-template-columns: 131px 700px ;
-     grid-template-rows: 30px 65px 65px;
-     grid-gap: 5px;
-     margin-top: 10px;
-     padding: 30px 50px;
+.policyGrid {
+  display: grid;
+  grid-template-columns: 131px 700px;
+  grid-template-rows: 30px 65px 65px;
+  grid-gap: 5px;
+  margin-top: 10px;
+  padding: 30px 50px;
 
-     font-size: 14px;
-    color: #33414f;
-    padding: 15px 63px;
-   }
+  font-size: 14px;
+  color: #33414f;
+  padding: 15px 63px;
+}
 
-   .policygridchild1{
-    font-size: 18px;
-    text-align: left;
-    color: #000;
-   }
+.policygridchild1 {
+  font-size: 18px;
+  text-align: left;
+  color: #000;
+}
 
-   .policygridchild2{
-    font-weight: 600;
-    text-align: left;
-    margin-right: 30px;
-   }
-   .knowMore {
-    cursor: pointer;
-    position: absolute;
-    left: 495px;
-    bottom: -5px;
-    font-size: 10px;
-    text-align: center;
-    /* width: 100%; */
+.policygridchild2 {
+  font-weight: 600;
+  text-align: left;
+  margin-right: 30px;
+}
+.knowMore {
+  cursor: pointer;
+  position: absolute;
+  left: 495px;
+  bottom: -5px;
+  font-size: 10px;
+  text-align: center;
+  /* width: 100%; */
 }
 
 .knowMore .detailedKnowMore {
-    padding: 8px;
-    width: 125px;
-    margin: auto;
-    font-weight: 600;
-    color: #4990e2;
-    border-radius: 100px;
-    background-color: #fff;
-     box-shadow: 0 1px 1px 1px rgba(0, 0, 0, 0.3);
-    
+  padding: 8px;
+  width: 125px;
+  margin: auto;
+  font-weight: 600;
+  color: #4990e2;
+  border-radius: 100px;
+  background-color: #fff;
+  box-shadow: 0 1px 1px 1px rgba(0, 0, 0, 0.3);
 }
 
-.roadimg{
+.roadimg {
   border: 1px solid #ccc;
-    width: 44px;
-    height: 44px;
-    border-radius: 50%;
-    margin: 5px auto;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  margin: 5px auto;
 }
 
-.roadprice{
+.roadprice {
   font-size: 14px;
-    font-weight: 600;
-    color: #33414f;
+  font-weight: 600;
+  color: #33414f;
 }
 
-.roadimgchild1{
+.roadimgchild1 {
   text-align: center;
-    font-size: 14px;
-    color: #33414f;
+  font-size: 14px;
+  color: #33414f;
 }
 
-.roadimgchild2{
-  opacity: .54;
-    font-size: 12px;
-    text-align: center;
-    color: #000;
-    overflow: hidden;
-    text-overflow: ellipsis;
+.roadimgchild2 {
+  opacity: 0.54;
+  font-size: 12px;
+  text-align: center;
+  color: #000;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
-#pick_loca, #drop_loca{
+#pick_loca,
+#drop_loca {
   font-size: 15px;
   text-transform: uppercase;
 }
-#pi_dt ,#dr_dt{
+#pi_dt,
+#dr_dt {
   font-size: 11px;
   text-transform: uppercase;
 }
-.bookPrice{
+.bookPrice {
   display: flex;
   font-size: 30px;
   color: #70ad4d;
   font-weight: 600;
 }
-.bookPrice p{
+.bookPrice p {
   margin: 0%;
   padding: 0%;
   color: #70ad4d;
